opam-version: "2.0"
name:         "lablqml"
maintainer:   "kakadu.hafanana@gmail.com"
authors:      "kakadu.hafanana@gmail.com"
homepage:     "http://kakadu.github.io/lablqt/"
bug-reports:  "https://github.com/kakadu/lablqml/issues"
dev-repo: "git+https://github.com/Kakadu/lablqml.git"
tags: [ "gui" "ui" "qt" ]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
flags: [ light-uninstall ]
depends: [
  "ocaml" {>= "4.03.0" & < "4.8"}
  "ocamlfind" {build}
  "dune"
  "configurator" {build & < "v0.13"}
  "conf-qt" {>= "5.2.1"}
  "ppxlib"  {<= "0.9.0"}
  "ppx_tools" {>= "4.08.0"}
  "conf-pkg-config" {build}
]
synopsis:
  "OCamlfind package and PPX extension to interface OCaml and QtQuick"
description: "Versions <= 0.4 are known as `lablqt`, >0.5 -- as `lablqml`."
url {
  src: "https://github.com/Kakadu/lablqml/archive/0.6.1.tar.gz"
  checksum: "md5=78d82c02437eb2dcd4ebf2c60bf3946f"
}
